:sparkles: feat: fix overflow in whats new container

--- a/src/user.css
+++ b/src/user.css
@@ -1819,6 +1819,11 @@ button[aria-label="Browse"] path {
   }
 }
 
+.pVVteJIfAdehWU3vX7JR {
+  margin: 0;
+  padding: 24px;
+}
+
 /* Search modal */
 
 .zZMsUUWG29PYcwWPXhOV,
